# distributed-training

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.serve  Dockerfile.train.cpu  Dockerfile.train.gpu  Makefile  README.md  cloudbuild-train.yaml  cloudbuild.yaml  docker-compose.yml  pyproject.gpu.toml  pyproject.toml  requirements-serve.txt
.github/workflows/: build-train.yaml
docs/: README.md  gpu-training.md  next-steps.md  runpod.md
infra/: .terraform.lock.hcl  README.md  backend.tfvars.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/core/: main.tf  outputs.tf  variables.tf
infra/gcp/: main.tf  outputs.tf  variables.tf
infra/runpod/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
libs/common/src/common/: __init__.py  config.py  distributed.py  registry.py  serve_models.py  tracking.py  upload_standalone.py
notebooks/: 01_concepts.ipynb
projects/lora/: pyproject.toml
projects/lora/src/lora/: __init__.py  config.py  serve.py  train.py
projects/mnist/: pyproject.toml
projects/mnist/src/mnist/: __init__.py  train.py
projects/serve/: pyproject.toml
projects/serve/src/serve/: app.py
projects/train/: pyproject.gpu.toml  pyproject.toml
projects/train/src/train/: __init__.py
scripts/: bootstrap_tfstate.sh  build_train.sh  common.sh  deploy_endpoint.sh  run_gcp.sh  run_local.sh  run_lora.sh  run_training.sh  setup_artifact_registry.sh  test_inference.sh
scripts/backends/: common.sh  gcp.sh  runpod.sh
src/: config.py  data.py  distributed.py  registry.py  serve.py  tracking.py  train.py  upload_standalone.py
