[project]
name = "distributed-training"
version = "0.1.0"
description = "Learn distributed ML training with PyTorch DDP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.sources]
common = { workspace = true }
serve = { workspace = true }
train = { workspace = true }
lora = { workspace = true }
mnist = { workspace = true }

[tool.uv.workspace]
members = ["libs/*", "projects/*"]

[tool.uv]
package = false

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "ruff",
    "pyright",
    "common",
    "mnist",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B"]
ignore = ["N817"]
extend-select = ["ANN401"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportMissingImports = false
reportUntypedBaseClass = false
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
